--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,13 +11,13 @@ COPY scripts/*.sh /tmp/scripts/
 RUN cd /home/vscode && mkdir azure-pipelines && cd azure-pipelines
 
 # input ADO agent version argument
-ARG AGENT_VERSION=2.218.1
+#ARG AGENT_VERSION=2.218.1
 
 # download, extract and install dependencies for Azure DevOps Pipelines Agent
-RUN cd /home/vscode/azure-pipelines \
-    && curl -O -L https://download.agent.dev.azure.com/agent/${AGENT_VERSION}/vsts-agent-linux-x64-${AGENT_VERSION}.tar.gz \
-    && tar xzf /home/vscode/azure-pipelines/vsts-agent-linux-x64-${AGENT_VERSION}.tar.gz \
-    && /home/vscode/azure-pipelines/bin/installdependencies.sh
+#RUN cd /home/vscode/azure-pipelines \
+#    && curl -O -L https://download.agent.dev.azure.com/agent/${AGENT_VERSION}/vsts-agent-linux-x64-${AGENT_VERSION}.tar.gz \
+#    && tar xzf /home/vscode/azure-pipelines/vsts-agent-linux-x64-${AGENT_VERSION}.tar.gz \
+#    && /home/vscode/azure-pipelines/bin/installdependencies.sh
 
 # copy over the start.sh script
 COPY scripts/start.sh /home/vscode/azure-pipelines/start.sh
