--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,29 @@
 trigger:
 - main
 
-pool:
-  vmImage: ubuntu-latest
+- stage: Plan
+  jobs:
+  - job: terraform_plan
+    displayName: "[PLAN] ${{ variables['Build.DefinitionName'] }}"
+    pool: 'Default'
+    steps:
+    - bash: |
+        echo "##[section]Starting: Terraform Init"
+        terraform init -upgrade
+        echo "##[section]Starting: Terraform Plan"
+        terraform plan -out='./terraform/plan.tfplan' -input=false
+      displayName: 'Run Terraform Init and Plan'
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- stage: Apply
+  jobs:
+  - job: terraform_plan
+    displayName: "[PLAN] ${{ variables['Build.DefinitionName'] }}"
+    pool: 'Default'
+    steps:
+    - bash: |
+        echo "##[section]Starting: Terraform Init"
+        terraform init -upgrade
+        echo "##[section]Starting: Terraform Plan"
+        terraform plan -out='./terraform/plan.tfplan' -input=false
+        terraform apply -auto-approve './terraform/plan.tfplan'
+      displayName: 'Run Terraform Init and Plan'
