testing compose secret

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,7 +8,13 @@ services:
       - ../..:/workspaces:cached
     command: sleep infinity
     network_mode: service:azurite
+    environment:
+      - ADO_ORG=/run/secrets/ADO_ORG
 
   azurite:
     image: mcr.microsoft.com/azure-storage/azurite
     restart: unless-stopped
+
+secrets:
+  ADO_ORG:
+    file: ../../../ADO_ORG.txt
